First fix for the scrollbar

--- a/frontend/src/styles/searchbar.css
+++ b/frontend/src/styles/searchbar.css
@@ -10,9 +10,15 @@
     margin-bottom:10px;
     margin-top:10px;
     margin-left:10px;
+    justify-content: center;
+    width: 50%;
   }
   
   .movie-img-searchbar {
     width: 100px;
     border-radius: 15px;
   }
+
+  .scrolling::-webkit-scrollbar {
+    display: none;
+}
